- Fixed bug #50464 (declare encoding doesn't work with) # The bug (BC) only happens in this branch.